package proto_ff;

// calm 自定义的fieldoption都在该文件中
import "yd_fieldoptions.proto";
import "common_logic.proto";

import "Com.proto";

//请求移动  CLIENT_MOVE_REQ
message MoveReq
{
	required Vector3PB pos = 1;	  //生物当前位置
	required Vector2PB speed = 2; //生物移动速度(速度向量),为 0 时表示停止移动
	required Vector2PB dir = 3;	  //生物移动的方向
	optional int32 move_type = 4; //移动类型 1-技能技能，其他类型后面用到的时候再定义
}


//生物移动广播 MOVE_BROAD_RSP
message MoveBroadRsp
{
	required uint64 cid = 1;		//生物cid
	required Vector3PB pos = 2;		//生物当前位置
	required Vector2PB speed = 3;	//生物移动速度(速度向量)
	required Vector2PB dir = 4;		//生物移动的方向
}

//瞬移消息 MOVE_TELEPORT_RSP
message MoveTeleportRsp
{
	//瞬移类型
	enum Type
	{
		common   =1;	//普通瞬移
		skill	 =2;	//技能传送
		dup		= 3;	//副本内瞬移
		relive	= 4;	//复活瞬移
	}

	required int32  type	   = 1;	//瞬移类型
	required uint64 cid		   = 2;	//瞬移的生物cid
	required Vector3PB pos     = 3;	//瞬移的目标坐标
}
